--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
               个人中心
             </a>
             <dl class="layui-nav-child">
-              <dd><a href="">基本资料</a></dd>
-              <dd><a href="">更换头像</a></dd>
-              <dd><a href="">重置密码</a></dd>
+              <dd><a href="./user/user_info.html" target="fm">基本资料</a></dd>
+              <dd><a href="./user/user_avatar.html" target="fm">更换头像</a></dd>
+              <dd><a href="./user/user_pwd.html" target="fm">重置密码</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item" lay-header-event="menuRight" lay-unselect>
@@ -42,7 +42,9 @@
             <div class="userinfo">
                 <img src="./assert/images/qila.png" class="layui-nav-img hid">
                 <span class="text-avatar hid"></span>
-                <span id="welcome"></span>
+                <!-- <span class="welcomed"> -->
+                  <span id="welcome" class="welcomed"></span>
+                <!-- </span> -->
             </div> 
           <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
           <ul class="layui-nav layui-nav-tree" lay-shrink="all">
@@ -64,9 +66,9 @@
                     <span class="iconfont icon-user"></span>个人中心
                 </a>
               <dl class="layui-nav-child">
-                <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
-                <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
-                <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
+                <dd><a href="./user/user_info.html" target="fm"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
+                <dd><a href="./user/user_avatar.html" target="fm"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
+                <dd><a href="./user/user_pwd.html" target="fm"><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
               </dl>
             </li>
           </ul>
