完成了文章板块的开发

--- a/login.html
+++ b/login.html
@@ -24,7 +24,8 @@
                 </div>
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i>  
-                    <input type="password" name="password" required  lay-verify="required|pass" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                    <input type="password" name="password" required  lay-verify="required|pass" placeholder="请输入密码" autocomplete="off" class="layui-input psd">
+                    <img src="./assert/images/close.png" alt="" class="passChange">
                 </div>
                 <div class="layui-form-item">
                     <button class="layui-btn layui-btn-fluid btn" lay-submit>登录</button>
@@ -43,11 +44,13 @@
                 </div>
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i>  
-                    <input type="password" name="password" required  lay-verify="required|pass" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                    <input type="password" name="password" required  lay-verify="required|pass" placeholder="请输入密码" autocomplete="off" class="layui-input psd">
+                    <img src="./assert/images/close.png" alt="" class="passChange">
                 </div>
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i>  
-                    <input type="password" name="repassword" required  lay-verify="required|pass|repass" placeholder="再次请输入密码" autocomplete="off" class="layui-input">
+                    <input type="password" name="repassword" required  lay-verify="required|pass|repass" placeholder="再次请输入密码" autocomplete="off" class="layui-input psd">
+                    <img src="./assert/images/close.png" alt="" class="passChange">
                 </div>
                 <div class="layui-form-item">
                     <button class="layui-btn layui-btn-fluid btn" lay-submit>注册</button>
