--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                     <span class="iconfont icon-16"></span>文章管理
                 </a>
               <dl class="layui-nav-child">
-                <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
-                <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文字管理</a></dd>
-                <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发布文章</a></dd>
+                <dd><a href="./article/article_class.html" target="fm"><i class="layui-icon layui-icon-app"></i>文章类别</a></dd>
+                <dd  class="listChanged"><a href="./article/article_list.html" target="fm"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
+                <dd  class="listChange"><a href="./article/article_pub.html" target="fm"><i class="layui-icon layui-icon-app"></i>发布文章</a></dd>
               </dl>
             </li>
             <li class="layui-nav-item">
@@ -82,7 +82,7 @@
       
       <div class="layui-footer">
         <!-- 底部固定区域 -->
-        底部固定区域
+        © 2022.5.18 fuofu 
       </div>
     </div>
     <script src="./assert/lib/layui/layui.all.js"></script>
